--- a/src/components/EarthquakeAlert.css
+++ b/src/components/EarthquakeAlert.css
@@ -1,8 +1,9 @@
 .earthquake-alert {
   width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
+  gap: 1rem;
+  margin-bottom: 1rem;
 }
 
 .earthquake-warning {
