Restore News component and fix weekly weather display

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
 }
 
 .app-left {
-  width: 100%; /* 全幅に変更 */
+  width: 40%; /* 横サイズを広げる */
   display: flex;
   flex-direction: column;
   min-width: 0;
@@ -22,7 +22,13 @@
 }
 
 .app-right {
-  display: none; /* 右側を非表示 */
+  width: 60%; /* 右側のサイズを調整 */
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  position: relative;
+  z-index: 2;
+  overflow: hidden;
 }
 
 .app-earthquake {
